Fix vertical overflow of image in section 1

--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,9 @@ a:hover{
 
 .section-1{
     display: flex;
-    /* flex-wrap: wrap; */
-    height: 400px;
+    flex-wrap: wrap;
+    height: 50%;
+    min-height: 400px;
     padding-bottom: 3%;
     gap: 5%;
     background-color: #1f2937;
@@ -67,6 +68,7 @@ a:hover{
     flex-direction: column;
     width: 500px;
     gap: 16px;
+    margin-bottom: 32px;
 }
 
 .hero-title{
